# ndoutils

./: .clang-format  .gitignore  .travis.yml  Changelog  HISTORY  LEGAL  Makefile.in  README  README.md  REQUIREMENTS  THANKS  THANKS.md  TODO  UPGRADING  aclocal.m4  configure  configure.ac  configure.in  daemon-init.in  init-script.suse.in  install.sh  make-tarball  queue.c  subst.in  update-version
config/: misccommands.cfg  misccommands.cfg.in  nagios.cfg  nagios.cfg.in  ndo.cfg-sample  ndo.cfg-test  ndo2db.cfg  ndo2db.cfg-sample.in  ndomod.cfg  ndomod.cfg-sample.in
db/: README  common.sh  db-mgmt.sh  db.sql  installdb  mysql-mods-1.4b8.sql  mysql-upgrade-1.3.sql  mysql-upgrade-1.4b1.sql  mysql-upgrade-1.4b2.sql  mysql-upgrade-1.4b3.sql  mysql-upgrade-1.4b4.sql  mysql-upgrade-1.4b6.sql  mysql-upgrade-1.4b8.sql  mysql-upgrade-2.0.0.sql  mysql-upgrade-2.0.1.sql  mysql-upgrade-2.1.0.sql  mysql-upgrade-2.1.2.sql  mysql-upgrade-3.0.0.sql  mysql.sql  prepsql  upgrade-from-2.1.2.sql  upgrade-from-2.1.3.sql  upgradedb
db/queries/: comment_history.sql  comments.sql  contact_notification_methods.sql  contact_notifications.sql  contact_status.sql  contactgroup_membership.sql  contacts.sql  downtime_history.sql  event_handlers.sql  flapping_history.sql  host_comments.sql  host_downtime_history.sql  host_event_handlers.sql  host_flapping_history.sql  host_notifications.sql  host_state_history.sql  host_status.sql  hostgroup_membership.sql  hosts.sql  notifications.sql  scheduled_downtime.sql  service_comments.sql  service_downtime_history.sql  service_event_handlers.sql  service_flapping_history.sql  service_notifications.sql  service_state_history.sql  service_status.sql  servicegroup_membership.sql  services.sql  state_history.sql  timed_event_queue.sql  timed_events.sql
docs/: NDOUTILS DB Model.odt  NDOUtils Documentation.odt
docs/docbook/en-en/: Makefile.in  NDOUtils.xml  all-entities.ent  components.xml  example-configs.xml  installation.xml  introduction.xml  whatsnew.xml
docs/docbook/en-en/ent/: documents.ent  names.ent  plugins.ent  protocols.ent  urls.ent  version.ent
docs/docbook/xsl/: fo.xsl  html-chunked.xsl  html-single.xsl  titlepage.xml  titlepage.xsl
docs/html/en-en/: ch01.html  ch02.html  ch03.html  ch04.html  components.html  example-configs.html  index.html  installation.html  intro.html  whatsnew.html
include/: common.h  common.h.in  config.h.in  db.h  dbhandlers.h  dbstatements.h  get-headers.sh  getheaders  io.h  io.h.in  mysql-helpers.h  ndo.h  ndo2db.h  ndomod.h  protoapi.h  queue.h  test.h  utils.h
include/nagios/: config.h  locations.h  macros.h
include/nagios-2x/: cgiutils.h  common.h  config.h  locations.h  snprintf.h
include/nagios-3x/: cgiutils.h  compat.h  config.h  locations.h  nagios.h  snprintf.h
include/nagios-4x/: cgiutils.h  comments.h  common.h  config.h  defaults.h  downtime.h  locations.h  logging.h  macros.h  nagios.h  nebcallbacks.h  neberrors.h  nebmods.h  nebmodules.h  nebstructs.h  netutils.h  objects.h  perfdata.h  shared.h  statusdata.h
include/nagios-4x/lib/: fanout.h  libnagios.h  nsutils.h  pqueue.h  runcmd.h  squeue.h  t-utils.h  worker.h
include/nagios/lib/: iobroker.h  libnagios.h
macros/: np_mysqlclient.m4
src/: Makefile.in  README.md  bug-test.c  db.c  dbhandlers.c  dbstatements.c  file2sock.c  init.c  io.c  log2ndo.c  ndo-handlers-queue.c  ndo-handlers.c  ndo-startup-hash.sh  ndo-startup-queue.c  ndo-startup.c  ndo.c  ndo2db.c  ndomod.c  protonum.c  queue.c  snprintf.c  sockdebug.c  timing.c  utils.c
startup/: bsd-init.in  debian-init.in  default-inetd.in  default-init.in  default-service.in  default-socket-svc.in  default-socket.in  default-xinetd.in  gentoo-init.in  mac-inetd.plist.in  mac-init.plist.in  newbsd-init.in  openbsd-init.in  openrc-conf.in  openrc-init.in  rh-upstart-init.in  solaris-inetd.xml.in  solaris-init.xml.in  tmpfile.conf.in  upstart-init.in
test/: Makefile.in  dynamic.supp  nagios-stubs.c  test-bootstrap.c  test.c
